src/objects/Core_Biopsy_Specimens__c.object
<CustomObject>
    <fields>
        <fullName>Core_Specimen__c</fullName>
        <label>Core Specimen #</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Integration_Timestamp__c</fullName>
        <label>Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Integration_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Integration Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Reason_samples_not_shipped__c</fullName>
        <label>Other (Reason samples not shipped)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_samples_not_shipped__c</fullName>
        <label>Reason samples not shipped</label>
        <picklist>
            <controllingField>Shipped__c</controllingField>
            <picklistValues>
                <fullName>Spilled on floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thawed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipped__c</fullName>
        <label>Shipped?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SpecimenID__c</fullName>
        <label>Specimen ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TissueSpecimenDetail__c</fullName>
        <label>Tissue Specimen Detail</label>
        <referenceTo>TissueSpecimenDetail__c</referenceTo>
        <relationshipLabel>Core Biopsy Specimens</relationshipLabel>
        <relationshipName>Core_Biopsy_Specimens</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Core Biopsy Specimens</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Core Biopsy Specimens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValidateReasonSamplesNotShipped</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Reason_samples_not_shipped__c, &apos;Other&apos;) &amp;&amp;  Other_Reason_samples_not_shipped__c = null</errorConditionFormula>
        <errorMessage>Other (Reason samples not shipped)</errorMessage>
    </validationRules>
</CustomObject>